fix gallery alignment on no drawing message

--- a/app/assets/stylesheets/photos.scss
+++ b/app/assets/stylesheets/photos.scss
@@ -98,7 +98,7 @@ input[type=submit].hidden {
     }
 
     .no-drawings-msg {
-        width: 500px;
+        width: 480px;
     }
 }
 
